# bevy_project

./: .gitignore  Cargo.toml  README.md  README.txt
.cargo/: config.toml
src/: initialize.rs  macros.rs  main.rs  provatheus.rs
